1000 Mutations/Images/difference/192/survey.txt
Microservice listening on http://localhost:3000/preview

/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:821
            throw invalidEOF()
            ^

SyntaxError: JSON5: invalid end of input at 1:1
    at syntaxError (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1083:17)
    at invalidEOF (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:1032:12)
    at Object.start (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:821:19)
    at Object.parse (/home/ubuntu/checkbox.io-micro-preview/node_modules/json5/lib/parse.js:32:32)
    at Object.exports.render (/home/ubuntu/checkbox.io-micro-preview/marqdown.js:15:26)
    at /home/ubuntu/checkbox.io-micro-preview/index.js:23:29
    at FSReqCallback.readFileAfterClose [as oncomplete] (internal/fs/read_file_context.js:63:3) {
  lineNumber: 1,
  columnNumber: 1
}
